--- a/first_notebook.ipynb
+++ b/first_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "#This is my jyputer notebookk\n",
+    "#This is my jupyter notebook\n",
     "print(\"my name is Allen\")"
    ]
   }
