--- a/lectures/lecture-07/07-applications-simulation.ipynb
+++ b/lectures/lecture-07/07-applications-simulation.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -321,13 +321,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# Use `list(range())` to create the following lists:\n",
     "# Create a list with the numbers from 0 to 9\n",
-    "# Create a list with the odd numbers from 1 to 9\n"
+    "# Create a list with the odd numbers from 1 to 9\n",
+    "numbers_0_to_9 = list(range(10))\n",
+    "print(numbers_0_to_9)\n",
+    "odd_numbers_1_to_9 = list(range(1, 10, 2))\n",
+    "print(odd_numbers_1_to_9)"
    ]
   },
   {
@@ -772,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
