--- a/lectures/lecture-08/08-functions-arguments.ipynb
+++ b/lectures/lecture-08/08-functions-arguments.ipynb
@@ -407,7 +407,11 @@
    "outputs": [],
    "source": [
     "# Write your own code here\n",
-    "\n"
+    "\n",
+    "x = 2\n",
+    "def my_functfion(x**2n + 2*x + 1)\n",
+    "\n",
+    "x = 3"
    ]
   },
   {
@@ -433,7 +437,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your own code\n"
+    "# Write your own code\n",
+    "if grade >= 55:\n",
+    "    status = \"pass\"\n",
+    "else \n",
+    "status = \"fail\"\n",
+    "\n",
+    "return status \n"
    ]
   },
   {
@@ -664,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
