--- a/lectures/lecture-10/10-operations-multiple-datasets.ipynb
+++ b/lectures/lecture-10/10-operations-multiple-datasets.ipynb
@@ -15,6 +15,17 @@
     "\n",
     "Exercises posted on Canvas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
