--- a/assignments/02-assignment.ipynb
+++ b/assignments/02-assignment.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path = '/Users/allenhung/Documents/GitHub/qtm151/assignments/data/worldbank_wdi_2019.csv'\n",
-    "wdi = pd.read_csv(file_path)"
+    "wdi = pd.read_csv(file_path)\n"
    ]
   },
   {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "Name: gdp_per_capita_usd, dtype: float64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,16 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x166f424b0>"
+       "<matplotlib.collections.PathCollection at 0x177565370>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -241,7 +241,7 @@
    "source": [
     "plt.xlabel(\"gdp_per_capita_usd\")\n",
     "plt.ylabel(\"lifexpectancy\")\n",
-    "plt.scatter(x=wdi['gdp_per_capita_usd'],y=wdi['life_expectancy'])"
+    "plt.scatter(x=wdi['gdp_per_capita_usd'], y=wdi['life_expectancy'])"
    ]
   }
  ],
