--- a/assignments/03-assignment.ipynb
+++ b/assignments/03-assignment.ipynb
@@ -30,7 +30,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2575182"
+   ]
   },
   {
    "attachments": {},
@@ -44,12 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your own code\n",
-    "\n"
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt \n"
    ]
   },
   {
@@ -78,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12047.27972315071\n"
+     ]
+    }
+   ],
    "source": [
     "# Note (if you're interested in the context)\n",
     "# V = Accumulated value of investment\n",
@@ -90,7 +101,14 @@
     "# t = Number of years\n",
     "\n",
     "# Write your own code\n",
+    "P = 1800 \n",
+    "r = 0.24 \n",
+    "n = 12 \n",
+    "t = 8 \n",
     "\n",
+    "V = P * ((1 + (r/n))**(n * t))\n",
+    "\n",
+    "print(V)\n",
     "\n",
     "\n",
     "\n"
@@ -125,13 +143,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[20.         28.30188679 13.3499466 ]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "61.65183339266643"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code\n",
+    "r = 0.06 \n",
+    "a = np.array([20,30,15])\n",
+    "t = np.array([0,1,2])\n",
     "\n",
+    "M = np.array([a/(1+r)**t])\n",
+    "print(M)\n",
     "\n",
+    "print(M.sum())\n",
     "\n"
    ]
   },
@@ -162,6 +204,9 @@
    "outputs": [],
    "source": [
     "# Write your own code\n",
+    "np.random.seed()\n",
+    "x = np.random.hist(mean = 3.5, std = 1.5, size = 1500)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -251,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
