--- a/assignments/05-assignment.ipynb
+++ b/assignments/05-assignment.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Write your answer here:\n",
-    "\n"
+    "print(\"2670867\")\n"
    ]
   },
   {
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your answer here:\n",
-    "\n"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your answer here:\n",
-    "\n"
+    "import os\n"
    ]
   },
   {
@@ -123,13 +123,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/allenhung/Documents/GitHub/qtm151/assignments/wdi_data\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer for (1) here\n",
-    "\n",
-    "\n"
+    "current_directory = os.getcwd()\n",
+    "print(current_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['wdi_2020.csv', 'wdi_2000.csv', 'features.xlsx']\n",
+      "['wdi_2020.csv', 'wdi_2000.csv', 'features.xlsx']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "ls_files = os.listdir()\n",
+    "print(ls_files)\n",
+    "#3\n",
+    "#os.chdir(current_directory + \"/\" + ls_files[2])\n",
+    "os.chdir(current_directory)\n",
+    "print(os.listdir(os.getcwd()))\n",
+    "#4\n"
    ]
   },
   {
@@ -330,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
