--- a/assignments/05-assignment.ipynb
+++ b/assignments/05-assignment.ipynb
@@ -27,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2670867\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here:\n",
     "print(\"2670867\")\n"
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,77 +131,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/allenhung/Documents/GitHub/qtm151/assignments/wdi_data\n"
+      "/Users/allenhung/Documents/GitHub/qtm151/assignments\n"
      ]
     }
    ],
    "source": [
     "# Write your answer for (1) here\n",
-    "current_directory = os.getcwd()\n",
-    "print(current_directory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['wdi_2020.csv', 'wdi_2000.csv', 'features.xlsx']\n",
-      "['wdi_2020.csv', 'wdi_2000.csv', 'features.xlsx']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#2\n",
-    "ls_files = os.listdir()\n",
-    "print(ls_files)\n",
-    "#3\n",
-    "#os.chdir(current_directory + \"/\" + ls_files[2])\n",
-    "os.chdir(current_directory)\n",
-    "print(os.listdir(os.getcwd()))\n",
-    "#4\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write your answer for (2) here\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write your answer for (3) here\n",
+    "file_path = '/Users/allenhung/Documents/GitHub/qtm151/assignments'\n",
+    "\n",
+    "current_directory = file_path\n",
+    "print(current_directory)\n",
+    "#current_directory = os.getcwd()\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['wdi_2020.csv', 'wdi_2000.csv', 'features.xlsx']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write your answer for (2) here\n",
+    "\n",
+    "ls_files = os.listdir()\n",
+    "print(ls_files)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['wdi_2020.csv', 'wdi_2000.csv', 'features.xlsx']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write your answer for (3) here\n",
+    "os.chdir(current_directory + \"/wdi_data\")\n",
+    "print(os.listdir(os.getcwd()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/allenhung/Documents/GitHub/qtm151/assignments\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer for (4) here\n",
-    "\n"
+    "file_path = '/Users/allenhung/Documents/GitHub/qtm151/assignments'\n",
+    "\n",
+    "current_directory = file_path\n",
+    "os.chdir(current_directory)\n",
+    "\n",
+    "print(current_directory)"
    ]
   },
   {
@@ -221,12 +240,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your answer here:\n",
+    "dataset_name = \"wdi_2000.csv\"\n",
+    "old_directory = \"wdi_data/\"\n",
+    "new_directory = \"clean_data/\"\n",
+    "old_path = os.path.join(old_directory, dataset_name)\n",
+    "new_path = os.path.join(new_directory, dataset_name)\n",
     "\n",
+    "# Ensure the new directory exists\n",
+    "os.makedirs(new_directory, exist_ok=True)\n",
+    "\n",
+    "# Read the CSV file from the old location\n",
+    "data = pd.read_csv(old_path)\n",
+    "\n",
+    "# Save the DataFrame to the new location\n",
+    "data.to_csv(new_path, index=False)\n",
     "\n",
     "\n"
    ]
@@ -266,12 +298,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of all files in 'wdi_data': ['wdi_2020.csv', 'wdi_2000.csv', 'features.xlsx']\n",
+      "Filename does not end with .csv: features.xlsx\n",
+      "List of CSV files: ['wdi_2020.csv', 'wdi_2000.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here:\n",
+    "list_filenames = os.listdir(\"wdi_data\")\n",
     "\n",
+    "list_csv_files = []\n",
+    "\n",
+    "# Print the list of files\n",
+    "print(\"List of all files in 'wdi_data':\", list_filenames)\n",
+    "\n",
+    "# for-loop over the filenames\n",
+    "for filename in list_filenames:\n",
+    "    # Check if the filename ends with .csv\n",
+    "    if filename.endswith(\".csv\"):\n",
+    "        list_csv_files.append(filename)\n",
+    "    else:\n",
+    "        print(\"Filename does not end with .csv: \" + filename)\n",
+    "\n",
+    "# Print the list of CSV files\n",
+    "print(\"List of CSV files:\", list_csv_files)\n",
     "\n",
     "\n",
     "\n"
@@ -297,13 +355,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of countries with urban population proportion between 20% and 60%: 121\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here:\n",
+    "file_path = '/Users/allenhung/Documents/GitHub/qtm151/assignments/wdi_data/wdi_2020.csv'\n",
+    "df = pd.read_csv(file_path)\n",
     "\n",
+    "#Calculate the number of countries with prop_urbanpopulation between 20 and 60\n",
+    "count_countries = df[(df['prop_urbanpopulation'] > 20) & (df['prop_urbanpopulation'] < 60)].shape[0]\n",
     "\n",
+    "# Print the result\n",
+    "print(\"Number of countries with urban population proportion between 20% and 60%:\", count_countries)\n",
     "\n",
     "\n"
    ]
@@ -329,13 +401,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Allen, you have successfully imported functions from a python script.\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answer here:\n",
+    "import sys\n",
+    "import os\n",
     "\n",
-    "\n"
+    "def fn_message(name):\n",
+    "    print(name + \", you have successfully imported functions from a \" +\n",
+    "          \"python script.\")\n",
+    "    \n",
+    "\n",
+    "my_name = \"Allen\"  \n",
+    "\n",
+    "\n",
+    "fn_message(my_name)\n"
    ]
   },
   {
